--- a/assets/settings/reset.css
+++ b/assets/settings/reset.css
@@ -351,16 +351,25 @@ body{
 .content{
     display: flex;
     flex-direction: row;
+    
+    justify-content: center;
 }
 
 .footer{
     display: flex;
+    
+    max-width: calc(150px + 943px);
+    margin: 0 auto;
 }
 
-.content, .footer{
-    margin: 0 auto;
-    max-width: calc(140px + 930px);
+.content__navbar{
+    max-width: 150px;
 }
+
+.content__main{
+    max-width: 943px;
+}
+
 
 .content--mg-top-50,
 .footer--mg-top-50{
@@ -373,6 +382,7 @@ a{
     font: inherit;
 }
 
+
 i.fa{
     font-size: 16px;
     margin: 8.5px 6px 8.5px 7px;
@@ -382,6 +392,7 @@ i.fa{
     font-style: italic;
 }
 
-
-
-
+div{
+    background-size: cover;
+    background-origin: content-box;
+}
